--- a/Verax_API_EF/API_Services/API_Services.csproj
+++ b/Verax_API_EF/API_Services/API_Services.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Web_API\Web_API.csproj" />
+      <ProjectReference Include="..\Model\Model.csproj" />
     </ItemGroup>
 
 </Project>
