--- a/Verax_API_EF/StubbedContextLib/StubbedContextLib.csproj
+++ b/Verax_API_EF/StubbedContextLib/StubbedContextLib.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\DbContextLib\DbContextLib.csproj" />
+      <ProjectReference Include="..\Model\Model.csproj" />
     </ItemGroup>
 
     <ItemGroup>
