--- a/Verax_API_EF/Verax_API_EF/API/API.csproj
+++ b/Verax_API_EF/Verax_API_EF/API/API.csproj
@@ -26,6 +26,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\API_DbDataManager\API_DbDataManager.csproj" />
+      <ProjectReference Include="..\API_Mapping\API_Mapping.csproj" />
       <ProjectReference Include="..\API_Services\API_Services.csproj" />
       <ProjectReference Include="..\StubbedContextLib\StubbedContextLib.csproj" />
     </ItemGroup>
