--- a/Verax_API_EF/Verax_API_EF/Unit_Test_EF/Unit_Test_EF.csproj
+++ b/Verax_API_EF/Verax_API_EF/Unit_Test_EF/Unit_Test_EF.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DbContextLib\DbContextLib.csproj" />
     <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\StubbedContextLib\StubbedContextLib.csproj" />
   </ItemGroup>
 
   <ItemGroup>
