--- a/.drone.yml
+++ b/.drone.yml
@@ -50,3 +50,30 @@ steps:
         - push
         - pull_request
     depends_on: [build,tests]
+
+    - name: docker-build-and-push
+    image: plugins/docker
+    settings:
+      dockerfile: Verax_API_EF/Dockerfile
+      context: Verax_API_EF
+      registry: hub.codefirst.iut.uca.fr
+      repo: hub.codefirst.iut.uca.fr/louis.laborie/sae_2a_API_EF
+      username:
+        from_secret: SECRET_REGISTRY_USERNAME
+      password:
+        from_secret: SECRET_REGISTRY_PASSWORD
+    when:
+      branch:
+        - master
+
+  - name: deploy-container
+    image: hub.codefirst.iut.uca.fr/thomas.bellembois/codefirst-dockerproxy-clientdrone:latest
+    environment:
+      IMAGENAME: hub.codefirst.iut.uca.fr/louis.laborie/sae_2a_API_EF:latest
+      CONTAINERNAME: verax-api
+      COMMAND: create
+      OVERWRITE: true
+      CODEFIRST_CLIENTDRONE_ENV_ASPNETCORE_HTTP_PORTS: 80
+      ADMINS: louislaborie,tonyfages
+    depends_on:
+      - docker-build-and-push
