Mise à jour de 'Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json'

--- a/Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json
+++ b/Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json
@@ -29,6 +29,13 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "applicationUrl": "https://codefirst.iut.uca.fr/containers/Verax-verax-api/:{SericePort}/swagger",
+      "publishAllPorts": true,
+      "useSSL": true
+    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
