--- a/Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json
+++ b/Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json
@@ -32,7 +32,7 @@
     "docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "applicationUrl": "https://codefirst.iut.uca.fr/containers/Verax-verax-api/:{SericePort}/swagger",
+      "applicationUrl": "https://codefirst.iut.uca.fr/containers/Verax-verax-api/:{ServicePort}/swagger",
       "publishAllPorts": true,
       "useSSL": true
     },
