Mise à jour de 'Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json'

--- a/Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json
+++ b/Verax_API_EF/Verax_API_EF/API/Properties/launchSettings.json
@@ -32,7 +32,8 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "applicationUrl": "https://codefirst.iut.uca.fr/containers/Verax-verax-api/:{ServicePort}/swagger",
+      "launchUrl": "swagger",
+      "applicationUrl": "https://codefirst.iut.uca.fr/containers/Verax-verax-api",
       "publishAllPorts": true,
       "useSSL": true
     },
